Fixed list items spacing in services

--- a/src/App.css
+++ b/src/App.css
@@ -345,11 +345,11 @@ blockquote {
 }
 
 .services-description ul li p{
-  margin-bottom: 5vh;
+  margin-bottom: 1vh;
 }
 
 .smaller{
-  font-size: 10px;
+  font-size: 11px;
 }
 
 .note{
